# Phantom

./: _injector_syscall.py  anleitung.md  bin_to_header.py  crypter.py  injector.py  injector_final.py  keylogger.py  listener.py
Operation_Phantom/: CMakeLists.txt  README.md  bin_to_header.py  requirements.txt
Operation_Phantom/src/: aes.h  config.h  injector.cpp  injector.h  logger.cpp  logger.h  obfuscated_string.h  persistence.cpp  persistence.h  syscalls.cpp  syscalls.h
Operation_Phantom/src/techniques/: ApcInjection.cpp  ApcInjection.h  EarlyBirdInjection.cpp  EarlyBirdInjection.h  I_InjectionTechnique.h  InjectionResult.h  ProcessHollowing.cpp  ProcessHollowing.h  SyscallData.h  syscall_stub.asm  util.cpp  util.h
